# mini-insuretech-qa

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: database.py  main.py  models.py  schemas.py
app/services/: quote_service.py
tests/: conftest.py
tests/api/: test_customers_api.py  test_health.py  test_quotes_api.py
tests/test_data/: payloads.py
tests/ui/: conftest.py  test_swagger_ui.py
