[project]
name = "mini-insuretech-qa-portfolio"
version = "0.1.0"
description = "SDET portfolio for a mini InsureTech API built with FastAPI and tested with pytest, focusing on backend API automation, integration testing, and data integrity validation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pytest",
    "httpx",
    "email-validator",
    "pytest-html",
    "pytest-cov",
    "pytest-playwright",
]

[dependency-groups]
dev = [
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

# --verbose: show test names
# -r a: report all except passed
# --html: generate HTML report
# --self-contained-html: embed CSS/JS in HTML
addopts = "--verbose -r a --html=reports/report.html --self-contained-html --cov=app --cov-report=term-missing --cov-report=html:reports/coverage"

markers = [
    "ui: marks tests as UI tests requiring a running server",
]
